WebKitTools/DumpRenderTree/LayoutTestController.h
@@ -95,6 +95,7 @@ public:
     void setXSSAuditorEnabled(bool flag);
     void setFrameFlatteningEnabled(bool enable);
     void setSpatialNavigationEnabled(bool enable);
+    void setScrollbarPolicy(JSStringRef orientation, JSStringRef policy);
 
     void waitForPolicyDelegate();
     size_t webHistoryItemCount();
