WebKitTools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp
@@ -244,6 +244,11 @@ void LayoutTestController::waitForPolicyDelegate()
     setWaitToDump(true);
 }
 
+void LayoutTestController::setScrollbarPolicy(JSStringRef orientation, JSStringRef policy)
+{
+    // FIXME: implement
+}
+
 void LayoutTestController::whiteListAccessFromOrigin(JSStringRef sourceOrigin, JSStringRef protocol, JSStringRef host, bool includeSubdomains)
 {
     gchar* sourceOriginGChar = JSStringCopyUTF8CString(sourceOrigin);
