WebKitTools/DumpRenderTree/win/LayoutTestControllerWin.cpp
@@ -986,6 +986,11 @@ void LayoutTestController::whiteListAccessFromOrigin(JSStringRef sourceOrigin, J
     webView->whiteListAccessFromOrigin(bstrT(sourceOrigin).GetBSTR(), bstrT(destinationProtocol).GetBSTR(), bstrT(destinationHost).GetBSTR(), allowDestinationSubdomains);
 }
 
+void LayoutTestController::setScrollbarPolicy(JSStringRef orientation, JSStringRef policy)
+{
+    // FIXME: implement
+}
+
 void LayoutTestController::addUserScript(JSStringRef source, bool runAtStart)
 {
     COMPtr<IWebViewPrivate> webView;
